--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -53,7 +53,9 @@
     "repeatDays": "Dni powtarzania",
     "repeat-hours": "Godziny powtarzania",
     "repeatHours": "Godziny powtarzania",
-    "available": "Dostępne"
+    "available": "Dostępne",
+    "congrats": "Gratulacje",
+    "done": "Zrobione"
   },
   "date": {
     "daily": "Codziennie",
