--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -54,8 +54,8 @@
     "repeat-hours": "Godziny powtarzania",
     "repeatHours": "Godziny powtarzania",
     "available": "Dostępne",
-    "congrats": "Gratulacje",
-    "done": "Zrobione"
+    "done": "Wszystko zrobione!",
+    "start": "Zacznij nowy dzień"
   },
   "date": {
     "daily": "Codziennie",
