--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -58,7 +58,7 @@
     "repeatHours": "Repeat Hours",
     "available": "Available",
     "done": "All done for today!",
-    "start": "Start new day"
+    "start": "Start"
   },
   "date": {
     "daily": "Daily",
