--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -58,7 +58,7 @@
     "repeatHours": "Godziny powtarzania",
     "available": "Dostępne",
     "done": "Wszystko zrobione!",
-    "start": "Zacznij nowy dzień"
+    "start": "Zacznij"
   },
   "date": {
     "daily": "Codziennie",
