--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -59,7 +59,8 @@
     "repeatHours": "Godziny powtarzania",
     "available": "Dostępne",
     "done": "Wszystko zrobione!",
-    "start": "Zacznij"
+    "start": "Zacznij",
+    "finish": "Dalej"
   },
   "date": {
     "daily": "Codziennie",
