--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -61,6 +61,7 @@
     "done": "Wszystko zrobione!",
     "start": "Zacznij",
     "finish": "Dalej",
+    "begin": "Początek",
     "remaining": "Pozostało"
   },
   "date": {
