--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -27,14 +27,15 @@
     "disabled": "Disabled"
   },
   "message": {
-    "delete": "Are you sure to remove the habit",
-    "skip": "Are you sure to skip the habit",
-    "contact": "Do you want to contact the author of this app (Mikołaj Bryksa) on Linkedin",
-    "support": "Do you want to support the author of this app (Mikołaj Bryksa) by buying coffee"
+    "delete": "Are you sure to remove the habit?",
+    "skip": "Are you sure to skip the habit?",
+    "contact": "Do you want to contact the author of this app (Mikołaj Bryksa) on Linkedin?",
+    "support": "Do you want to support the author of this app (Mikołaj Bryksa) by buying coffee?"
   },
   "button": {
     "delete": "Delete",
     "cancel": "Cancel",
+    "close": "Close",
     "contact": "Contact",
     "support": "Support",
     "save": "Save",
