--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -47,12 +47,13 @@
     "habitName": "Habit name",
     "instead": "vs",
     "habitEnemy": "Opposite of habit",
-    "score": "Score",
-    "level": "Level",
     "minutes": "(in minutes)",
     "repeatDays": "Repeat days",
     "repeatHours": "Repeat Hours",
     "available": "Available",
+    "goodCounter": "Right choices",
+    "badCounter": "Easy choices",
+    "skipCounter": "Skipped choices",
     "done": "All done for today!",
     "start": "Start",
     "finish": "Next",
