--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -47,12 +47,13 @@
     "habitName": "Nazwa nawyku",
     "instead": "vs",
     "habitEnemy": "Przeciwieństwo nawyku",
-    "score": "Wynik",
-    "level": "Poziom",
     "minutes": "(w minutach)",
     "repeatDays": "Dni powtarzania",
     "repeatHours": "Godziny powtarzania",
     "available": "Dostępne",
+    "goodCounter": "Dobre wybory",
+    "badCounter": "Łatwe wybory",
+    "skipCounter": "Pominięte wybory",
     "done": "Wszystko na dzisiaj zrobione!",
     "start": "Zacznij",
     "finish": "Dalej",
